# informatics

./: Makefile  Readme.md  docker-compose.yml  manage.py  pyproject.toml
course/: admin.py  models.py
course/migrations/: 0001_initial.py  0002_initial.py
informatics/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
